--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -168,10 +168,10 @@
 				info = myStorage.getItem(storageKeyName.PERSONALINFO);
 				console.log('我的界面获取的个人信息：' + JSON.stringify(info))
 				if(info.uimg) {
-					var myDate = new Date();
-					document.getElementById('uimg').src = info.uimg + '?' + myDate.getTime();
-				} else {
-					document.getElementById('uimg').src = '../../image/utils/default_personalimage.png';
+//					var myDate = new Date();
+					document.getElementById('uimg').src = info.uimg;
+//				} else {
+//					document.getElementById('uimg').src = '../../image/utils/default_personalimage.png';
 				}
 				
 					document.getElementById('uname').innerText = info.unick?info.unick:"暂无昵称";
