--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -170,8 +170,8 @@
 				if(info.uimg) {
 //					var myDate = new Date();
 					document.getElementById('uimg').src = info.uimg;
-//				} else {
-//					document.getElementById('uimg').src = '../../image/utils/default_personalimage.png';
+				} else {
+					document.getElementById('uimg').src = '../../image/utils/default_personalimage.png';
 				}
 				
 					document.getElementById('uname').innerText = info.unick?info.unick:"暂无昵称";
