1、群成员名字后加身份 2、发布个人动态清楚内容

--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -81,6 +81,7 @@
 				mui.fire(main, 'addUserSpaceForMutiUsers', {
 					postData: postData
 				});
+				textView.value='';
 			})
 		})
 	</script>
