--- a/JiaoBaoYun-hb/html/mine/qun_manage_info_change.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_info_change.html
@@ -218,7 +218,8 @@
 						filePath = 'qun' + myDate.getTime() + (Math.floor(Math.random() * 10000) + 1) + '.png';
 					} else {
 						var str = qunImgPath.split('/');
-						filePath = str[str.length - 1];
+						var str2 = str[str.length - 1].split('?');
+						filePath = str2[0];
 						//console.log(filePath);
 					}
 					var domain = 'http://oh2zmummr.bkt.clouddn.com/'; //'http://o9u2jsxjm.bkt.clouddn.com/';
@@ -318,7 +319,7 @@
 								console.log('info:' + info);
 								if(qunImgPath == '') {
 									var myDate = new Date();
-									qunImgPath = domain + JSON.parse(info).key + '?' + myDate.getTime();; //群头像
+									qunImgPath = domain + JSON.parse(info).key + '?' + myDate.getTime(); //群头像
 									document.getElementById("qunimage").innerHTML = '<img style="margin-left: ' + marginLeft + ';" src="' + updateHeadImg(qunImgPath) + '" class="qun-image" />';
 									console.log('qunImgPath:' + qunImgPath);
 									//8.用户修改群各项信息
