修改资料头像

--- a/JiaoBaoYun-hb/html/mine/qun_manage.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage.html
@@ -654,6 +654,7 @@
 						var html2 = '<div class="keep-box-shadow-border keep-member" data-gutid="' + member.gutid + '" data-gid="' + member.gid + '">';
 						//头像
 						var html3 = '<img src="' + updateHeadImg(member.uimg, 2) + '" />';
+						console.log(updateHeadImg(member.uimg, 2));
 						//名称
 						var html4 = '';
 						if(member.ugname == null || member.ugname == '') { //没有群昵称
