--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -13,23 +13,13 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="../../css/mui.min.css">
-		<link rel="stylesheet" href="../../css/utils/common.css" />
+<link rel="stylesheet" href="../../css/utils/common.css" />
+		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
 		<script src="../../js/mui.min.js"></script>
-		<script type="text/javascript" src="../../js/qiniu/plupload.full.min.js"></script>
-		<script type="text/javascript" src="../../js/qiniu/qiniu.js"></script>
-		<script type="text/javascript" src="../../js/utils/QiNiuUtil.js"></script>
 		<style>
-			.cloud-color {
-				/*图标颜色*/
-				color: #ABB9B9;
-			}
-
-			img {
-				margin-top: 10px;
-				width: 30px;
-				height: 25px;
-				margin-left: 10px;
-				margin-right: 10px;
+			.iconfont {
+				line-height: 45px;
+				color: #333333;
 			}
 
 			.mui-bar-nav~ .mui-content .mui-pull-top-pocket {
@@ -39,17 +29,17 @@
 	</head>
 
 	<body>
-
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<p class="mui-title common-color-white" style="text-align: left;">云盘—云存储</p>
 		</header>
 		<div class="mui-content">
 			<div style="background-color: white;text-align: center;height: 45px;">
-				<img class="mui-pull-left" id="upload" src="../../image/cloud/cloud_upload.gif">
-				<img id="download" src="../../image/cloud/cloud_download.gif">
-				<img class=" mui-pull-right" id="add" src="../../image/cloud/cloud_add.png">
+				<span class="mui-icon iconfont icon-upload mui-pull-left" style="margin-left: 15px;"> 上传</span>
+				<span class="mui-icon iconfont icon-chuanshu"> 传输列表</span>
+				<span id="addfolder" class="mui-icon iconfont icon-newfolder mui-pull-right" style="margin-right: 15px;"> 文件夹</span>
 			</div>
+
 		</div>
 	</body>
 
@@ -72,10 +62,8 @@
 			//显示等待窗口
 			plus.nativeUI.showWaiting('正在加载中');
 			//下载，增加文件夹的监听
-			document.getElementById('download').addEventListener('tap', function() {
-				mui.toast('download');
-			});
-			document.getElementById('add').addEventListener('tap', function(e) {
+
+			document.getElementById('addfolder').addEventListener('tap', function(e) {
 				e.detail.gesture.preventDefault(); //修复iOS 8.x平台存在的bug，使用plus.nativeUI.prompt会造成输入法闪一下又没了
 				var btnArray = ['取消', '确定'];
 				mui.prompt('请输入新文件夹的名称：', '新文件夹', '新建文件夹', btnArray, function(e) {
@@ -122,38 +110,6 @@
 				path.push(getPath);
 				var title = document.body.querySelector('.mui-title');
 				title.innerHTML = getPath;
-			});
-
-			var pickButtonId = 'upload';
-			var getUpTokenUrl = 'http://192.168.0.178:8507/QiuToken.ashx';
-			var getUpTokenData = {};
-			var domain = 'http://o9u2jsxjm.bkt.clouddn.com/';
-			var filePath = '/A/A/云盘/';
-			var auto = true;
-			//设置上传的参数
-			var options = QiNiuUtil.UpOption(pickButtonId, getUpTokenUrl, getUpTokenData, domain, filePath, auto);
-			//console.log("options" + JSON.stringify(options));
-
-			var uploader = Qiniu.uploader(options);
-			//绑定上传的时的方法
-			uploader.bind('UploadProgress', function(up, file) {
-				// 每个文件上传时，处理相关的事情
-				console.log('文件上传时：' + JSON.stringify(file));
-				console.log('上传进度：' + file.percent);
-			});
-			//绑定上传成功的方法
-			uploader.bind('FileUploaded', function(up, file, info) {
-				console.log('---上传成功---');
-				console.log('file:' + JSON.stringify(file));
-				console.log('info:' + JSON.stringify(info));
-				mui.toast('上传成功');
-			});
-			//绑定上传出错的方法
-			uploader.bind('Error', function(up, err, errTip) {
-				//上传出错时，处理相关的事情
-				console.log('---上传出错---');
-				console.log('err' + JSON.stringify(err));
-				console.log('errTip' + JSON.stringify(errTip));
 			});
 
 		})
