--- a/JiaoBaoYun-hb/html/homework/publish-answer.html
+++ b/JiaoBaoYun-hb/html/homework/publish-answer.html
@@ -15,42 +15,42 @@
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<!--本页样式表-->
 		<link href="../../css/homework/publish-answer.css" rel="stylesheet" />
-	
+
 	</head>
 
 	<body>
 		<!--标题栏-->
 		<header class="mui-bar mui-bar-nav">
-		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">上传答案||作业</h1>
-		    <a id="getAnswer" class="mui-icon iconfont icon-xiangji mui-pull-right"></a>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<h1 class="mui-title">上传答案||作业</h1>
+			<a id="getAnswer" class="mui-icon iconfont icon-xiangji mui-pull-right"></a>
 		</header>
 		<div class="mui-content">
 			<!--表单-->
-		    <form class="mui-input-group">
-		    	<!--科目选项-->
-		        <div class="mui-input-row">
-		            <label>科目:</label>
-		            <select>
-		            	<option>语文</option>
-		            	<option>数学</option>
-		            	<option>英语</option>
-		            	<option>历史</option>
-		            	<option>政治</option>
-		            	<option>地理</option>
-		            	<option>物理</option>
-		            	<option>化学</option>
-		            	<option>生物</option>
-		            	<option>其他</option>
-		            </select>
-		        </div>
-		         <p style="text-align: center;">请上传答案图片，以供学生参考</p>
-		        <div id="pictures" class="img-container">
-		        	
-		        </div>
-		       
-		    </form>
-		    <button  id='post-imgs' class="mui-btn mui-btn-blue btn-publish">上传作业</button>
+			<form class="mui-input-group">
+				<!--科目选项-->
+				<div class="mui-input-row">
+					<label>科目:</label>
+					<select>
+						<option>语文</option>
+						<option>数学</option>
+						<option>英语</option>
+						<option>历史</option>
+						<option>政治</option>
+						<option>地理</option>
+						<option>物理</option>
+						<option>化学</option>
+						<option>生物</option>
+						<option>其他</option>
+					</select>
+				</div>
+				<p style="text-align: center;">请上传答案图片，以供学生参考</p>
+				<div id="pictures" class="img-container">
+
+				</div>
+
+			</form>
+			<button id='post-imgs' class="mui-btn mui-btn-blue btn-publish">上传作业</button>
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<!--公共事件-->
@@ -66,56 +66,188 @@
 		<script type="text/javascript">
 			mui.init({
 				//手势事件配置
-				gestureConfig:{
-					longtap:true//长按事件 可监听
+				gestureConfig: {
+					longtap: true //长按事件 可监听
 				}
 			})
-			mui.plusReady(function(){
+			mui.plusReady(function() {
 				mui.previewImage();
-				var pictures=document.getElementById('pictures');
+				var pictures = document.getElementById('pictures');
 				/**
 				 * 通过系统相机获取图片
 				 * 并显示在界面上
 				 */
-				events.addTap('getAnswer',function(){
-					camera.getPic(camera.getCamera(),function(picPath){
-						var div=document.createElement('div');
-						div.className='img-div';
-						div.innerHTML='<img src="'+picPath+'" data-preview-src="" data-preview-group="1"/>'
-										+'<a class="mui-icon iconfont icon-guanbi"></a>'
-						pictures.appendChild(div);
+				events.addTap('getAnswer', function() {
+						camera.getPic(camera.getCamera(), function(picPath) {
+							var div = document.createElement('div');
+							div.className = 'img-div';
+							div.innerHTML = '<img src="' + picPath + '" data-preview-src="" data-preview-group="1"/>' +
+								'<a class="mui-icon iconfont icon-guanbi"></a>'
+							pictures.appendChild(div);
+						})
 					})
-				})
-				//获取图片显示控件
-				var pictures=document.getElementById('pictures');
+					//获取图片显示控件
+				var pictures = document.getElementById('pictures');
 				//图片长按事件
-				mui('#pictures').on('longtap','.img-div',function(){
-					mui.each(document.querySelectorAll('.icon-guanbi'),function(index,item){
-						//显示图标
-						item.style.display='block';
+				mui('#pictures').on('longtap', '.img-div', function() {
+						mui.each(document.querySelectorAll('.icon-guanbi'), function(index, item) {
+							//显示图标
+							item.style.display = 'block';
+						})
 					})
-				})
-				//删除图标的点击事件
-				mui('#pictures').on('tap','.icon-guanbi',function(){
-					//删除图片
-					pictures.removeChild(this.parentElement)
-					//获取路径
-					var path=this.parentElement.querySelector('img').src;
-					//在数组中删除图片路径
-					camera.filePaths.splice(camera.filePaths.indexOf(path));
-				})
-				//上传路径
-				var server="http://demo.dcloud.net.cn/helloh5/uploader/upload.php";
+					//删除图标的点击事件
+				mui('#pictures').on('tap', '.icon-guanbi', function() {
+						//删除图片
+						pictures.removeChild(this.parentElement)
+							//获取路径
+						var path = this.parentElement.querySelector('img').src;
+						//在数组中删除图片路径
+						camera.filePaths.splice(camera.filePaths.indexOf(path));
+					})
+					//上传路径
+				var server = "http://demo.dcloud.net.cn/helloh5/uploader/upload.php";
 				//上传按钮点击事件
-				events.addTap('post-imgs',function(){
-					if(camera.filePaths.length>0){
-						load.createUpload(server,camera.filePaths);
-					}else{
+				events.addTap('post-imgs', function() {
+					if(camera.filePaths.length > 0) {
+						load.createUpload(server, camera.filePaths);
+					} else {
 						mui.toast('请拍照后上传');
 					}
 				})
 			})
-			
+
+			//个人id
+			var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
+			//科目数组
+			var subjectArray = [];
+			//选择的科目id
+			var selectSubjectID = 0;
+
+			//17.获取所有科目列表
+			function requestSubjectList() {
+				//所需参数
+				var comData = {};
+				// 等待的对话框
+				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+				//17.获取所有科目列表
+				postDataPro_GetSubjectList(comData, wd, function(data) {
+					wd.close();
+					console.log('17.postDataPro_GetSubjectList:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+					if(data.RspCode == 0) {
+						//给科目数组赋值
+						subjectArray = data.RspData.List;
+						//给选择的科目id取第一个值
+						selectSubjectID = subjectArray[0].Value;
+						//		    "Default": true,
+						//          "Order": 1,
+						//          "Text": "语文",
+						//          "Value": 1
+					} else {
+						mui.toast(data.RspTxt);
+					}
+				});
+			}
+
+			//所需参数
+			//				var comData = {
+			//					teacherId: personalUTID, //教师Id，如果为学生，userId: personalUTID,
+			//					fileType: '1', //文件类型，1：图片；2：音频；3：视频；
+			//					filename: '', //文件名，带后缀；
+			//					fileStream: '', //base64格式文件流；
+			//					displayOrder: '' //图片顺序；
+			//				};
+
+			//11.上传文件；逻辑：如果是图片类型，同时生成缩略图
+			function requestUploadFile(comData) {
+				// 等待的对话框
+				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+				//11.上传文件；逻辑：如果是图片类型，同时生成缩略图
+				postDataPro_UploadFile(comData, wd, function(data) {
+					wd.close();
+					console.log('11.postDataPro_UploadFile:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+					if(data.RspCode == 0) {
+						//						“FileId”：1，       //文件id
+						//						“FileName”：”xxx.png”,       //文件名
+						//						“FileType”：1,       //文件类型
+						//						“Url”：“xxx/xxx.png”       //文件url
+						//						“ThumbUrl”：”xxxxxxxx/xxx.png”，    //缩略图url
+						//						“DisplayOrder”：1                //显示顺序
+					} else {
+						mui.toast(data.RspTxt);
+					}
+				});
+			}
+
+			//所需参数
+			//				var comData = {
+			//					teacherId: personalUTID, //教师Id
+			//					subjectId: selectSubjectID, //科目Id， 见（一）.17. GetSubjectList()；
+			//					fileIds: '' //上传文件的id串，例如“1,2”；
+			//				};
+			//14.发布答案,只能上传图片；
+			function requestPublishAnswer(comData) {
+				// 等待的对话框
+				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+				//14.发布答案,只能上传图片；
+				postDataPro_PublishAnswer(comData, wd, function(data) {
+					wd.close();
+					console.log('14.postDataPro_PublishAnswer:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+					if(data.RspCode == 0) {
+
+					} else {
+						mui.toast(data.RspTxt);
+					}
+				});
+			}
+
+			//所需参数
+			//				var comData = {
+			//					userId: personalUTID, //学生/家长id，
+			//					studentId: personalUTID, //学生Id；
+			//					fileIds: '', //文件id数组；
+			//					teacherId: '', //老师Id；
+			//					teacherName: '' //老师名字；
+			//				};
+			//6.	提交答案结果
+			function requestSubmitAnswer(comData) {
+				// 等待的对话框
+				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+				//6.	提交答案结果
+				postDataPro_SubmitAnswerResult(comData, wd, function(data) {
+					wd.close();
+					console.log('6.postDataPro_SubmitAnswerResult:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+					if(data.RspCode == 0) {
+
+					} else {
+						mui.toast(data.RspTxt);
+					}
+				});
+			}
+
+			//所需参数
+//			var comData = {
+//				userId: personalUTID, //学生/家长id，
+//				studentId: personalUTID, //学生Id；
+//				answerResultId: '', //要修改的答案id；
+//				fileIds: '', //文件id数组；
+//				teacherId: '', //老师Id；
+//				teacherName: '' //老师名字；
+//			};
+			//8.修改答案结果；
+			function requestModifyAnswer(comData) {
+				// 等待的对话框
+				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+				//8.修改答案结果；
+				postDataPro_ModifyAnswerResult(comData, wd, function(data) {
+					wd.close();
+					console.log('8.postDataPro_ModifyAnswerResult:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+					if(data.RspCode == 0) {
+
+					} else {
+						mui.toast(data.RspTxt);
+					}
+				});
+			}
 		</script>
 	</body>
 
