--- a/JiaoBaoYun-hb/html/homework/publish-answer.html
+++ b/JiaoBaoYun-hb/html/homework/publish-answer.html
@@ -203,6 +203,7 @@
 			//所需参数
 			//				var comData = {
 			//					userId: personalUTID, //学生/家长id，
+			//					classId: '',//班级id
 			//					studentId: personalUTID, //学生Id；
 			//					fileIds: '', //文件id数组；
 			//					teacherId: '', //老师Id；
