云盘文件图标的色值

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -12,6 +12,8 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../../css/utils/common.css" />
+		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
+		<link rel="stylesheet" href="../../css/cloud.css" />
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript" src="../../js/utils/events.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
@@ -153,6 +155,10 @@
 			.mui-progressbar {
 				border-radius: 5px;
 			}
+
+			.iconfont{
+				font-size: 45px;
+			}
 		</style>
 	</head>
 
@@ -198,8 +204,9 @@
 						</li>
 						<li class="mui-table-view-cell mui-media mui-col-sm-9 mui-col-xs-9 " style="padding: 5px;margin: 0;margin-left: 10%;">
 							<div class="mui-row" id="cloudstoragefile">
-								<!--<div class="mui-col-sm-4 mui-col-xs-4 cloud-text-align-center">
-									<img class="cloud-bottom-imge" src="../../image/cloud/cloud_doc.png" />
+								<div class="mui-col-sm-4 mui-col-xs-4 cloud-text-align-center">
+									<!--<img class="cloud-bottom-imge" src="../../image/cloud/cloud_doc.png" />-->
+									<span class="mui-icon iconfont icon-txt"></span>
 									<p class="mui-ellipsis">泰国旅游照片泰国旅游照片</p>
 								</div>
 								<div class="mui-col-sm-4 mui-col-xs-4 cloud-text-align-center">
@@ -208,7 +215,7 @@
 								</div>
 								<div class="mui-col-sm-4 mui-col-xs-4 " id="addFolder">
 									<img class="cloud-bottom-imge" style="margin-top: 4px;" src="../../image/cloud/A_addfolder.png" />
-								</div>-->
+								</div>
 							</div>
 						</li>
 						<li class="mui-table-view-cell mui-media mui-col-sm-1 mui-col-xs-1 " style="padding: 0;">
