--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -22,11 +22,11 @@
 		<!--底部选项卡（.mui-bar-tab）-->
 		<nav class="mui-bar mui-bar-tab common-background-bar">
 			<a id="defaultTab" class="mui-tab-item mui-active" href="../quan/tab-zone.html">
-				<span class="mui-icon mui-icon-star"><!--<span class="mui-badge">1</span>--></span>
+				<span class="mui-icon iconfont icon-jiaoxiaoquan"><!--<span class="mui-badge">1</span>--></span>
 				<span class="mui-tab-label">家校圈</span>
 			</a>
 			<a id="tabclass" class="mui-tab-item" href="../tab_knowledge.html">
-				<span class="mui-icon mui-icon-help"></span>
+				<span class="mui-icon iconfont icon-wenda"></span>
 				<span class="mui-tab-label">问答</span>
 			</a>
 
