--- a/JiaoBaoYun-hb/html/quan/leave.html
+++ b/JiaoBaoYun-hb/html/quan/leave.html
@@ -9,6 +9,7 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="../../css/mui.min.css">
 		<link rel="stylesheet" href="../../css/utils/common.css" />
+		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
 	</head>
@@ -16,7 +17,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav common-background-bar ">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left common-color-white"></a>
-			<a id="pubLeave" class=" mui-icon mui-icon-compose  mui-pull-right mui-plus-visible common-color-white"></a>
+			<a id="pubLeave" class=" mui-icon iconfont icon-xie  mui-pull-right mui-plus-visible common-color-white"></a>
 			<h1 class="mui-title common-color-white common-font-family-Regular">留言板</h1>
 		</header>
 		<div class="mui-content"></div>
