修改云盘文件的图标

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -13,7 +13,7 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
-		<link rel="stylesheet" href="../../css/cloud.css" />
+		<link rel="stylesheet" href="../../css/cloud/file.css" />
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript" src="../../js/utils/events.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
@@ -156,7 +156,7 @@
 				border-radius: 5px;
 			}
 
-			.iconfont{
+			.iconfont {
 				font-size: 45px;
 			}
 		</style>
@@ -204,8 +204,8 @@
 						</li>
 						<li class="mui-table-view-cell mui-media mui-col-sm-9 mui-col-xs-9 " style="padding: 5px;margin: 0;margin-left: 10%;">
 							<div class="mui-row" id="cloudstoragefile">
-								<div class="mui-col-sm-4 mui-col-xs-4 cloud-text-align-center">
-									<!--<img class="cloud-bottom-imge" src="../../image/cloud/cloud_doc.png" />-->
+								<!--<div class="mui-col-sm-4 mui-col-xs-4 cloud-text-align-center">
+									<img class="cloud-bottom-imge" src="../../image/cloud/cloud_doc.png" />
 									<span class="mui-icon iconfont icon-txt"></span>
 									<p class="mui-ellipsis">泰国旅游照片泰国旅游照片</p>
 								</div>
@@ -215,7 +215,7 @@
 								</div>
 								<div class="mui-col-sm-4 mui-col-xs-4 " id="addFolder">
 									<img class="cloud-bottom-imge" style="margin-top: 4px;" src="../../image/cloud/A_addfolder.png" />
-								</div>
+								</div>-->
 							</div>
 						</li>
 						<li class="mui-table-view-cell mui-media mui-col-sm-1 mui-col-xs-1 " style="padding: 0;">
@@ -500,7 +500,11 @@
 						html1 = '<img class="cloud-bottom-imge" src="../../image/cloud/A_folder.png" />';
 					} else { //文件
 						var type = cloud.classify(data.ftype);
-						html1 = '<img class="cloud-bottom-imge" src="../../image/cloud/cloud_' + type + '.png" />';
+						if(type != '') {
+							html1 = '<span class="mui-icon iconfont ' + type + '"></span>';
+						} else {
+							html1 = '<img class="cloud-bottom-imge" src="../../image/cloud/A_folder.png" />';
+						}
 					}
 					var html2 = '<p class="mui-ellipsis">' + data.fname + '</p>';
 					div.innerHTML = html1 + html2;
